--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
